--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-# Get your API key from https://resend.com/api-keys
+# Required: Get your API key from https://resend.com/api-keys
 RESEND_API_KEY=re_your_api_key_here
+
+# Optional: Override the default recipient and sender
+# CONTACT_EMAIL=hello@zachlamb.com
+# RESEND_FROM_EMAIL=contact@yourdomain.com
