--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
 
       - run: npm ci
 
+      - name: Audit
+        run: npm audit --audit-level=high
+
       - name: Lint
         run: npm run lint
 
