Recommendations, contact, SEO, mailto env, and Next 16
- Trail Recommendations: real endorsements (Kimball Heaton, Katherine Liu, Lia Young), per-card View on LinkedIn link
- Contact: improved send animation (spring panel, plane trajectory, staggered text, sending dots); mailto from NEXT_PUBLIC_CONTACT_EMAIL with fallback to hello@zachlamb.com
- SEO: canonical URL, JSON-LD Person schema, remove hardcoded OG image so dynamic opengraph-image is used
- Skills: infographic with years of experience per tech, sorted by years
- Next.js 16: upgrade deps, dev:turbo alias, turbopackFileSystemCacheForDev; Experience test matchMedia mock for TS
- .env.example: document NEXT_PUBLIC_CONTACT_EMAIL

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ RESEND_API_KEY=re_your_api_key_here
 # Optional: Override the default recipient and sender
 # CONTACT_EMAIL=hello@zachlamb.com
 # RESEND_FROM_EMAIL=contact@yourdomain.com
+
+# Optional: Email shown in the "Or reach out directly" mailto link (should match CONTACT_EMAIL).
+# If unset, falls back to hello@zachlamb.com. Set in Vercel (or .env.local) when you want to change it.
+# NEXT_PUBLIC_CONTACT_EMAIL=hello@zachlamb.com
