--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "dev:turbo": "next dev --turbopack",
+    "dev:turbo": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint app/ components/ data/ lib/",
@@ -26,9 +26,9 @@
     "clsx": "^2",
     "framer-motion": "^11",
     "lucide-react": "^0.575.0",
-    "next": "^15",
-    "react": "^19",
-    "react-dom": "^19",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "resend": "^6.9.2",
     "tailwind-merge": "^3",
     "tailwindcss": "^4"
@@ -41,8 +41,8 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.4",
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.39.3",
